--- a/admin-login.html
+++ b/admin-login.html
@@ -21,7 +21,7 @@
       const username = document.getElementById('username').value;
       const password = document.getElementById('password').value;
 
-      const response = await fetch('/api/auth', {
+      const response = await fetch('https://warung-agen.vercel.app/api/auth', {
         method: 'POST',
         headers: { 'Content-Type': 'application/json' },
         body: JSON.stringify({ username, password }),
