--- a/manage-products.html
+++ b/manage-products.html
@@ -5,6 +5,63 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Manage Products</title>
     <link rel="stylesheet" href="style.css">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 20px;
+            background-color: #f4f4f4;
+        }
+        header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            background: #35424a;
+            color: white;
+            padding: 10px 20px;
+        }
+        h1 {
+            margin: 0;
+        }
+        main {
+            margin-top: 20px;
+        }
+        #product-list {
+            margin-bottom: 20px;
+        }
+        .product-item {
+            background: white;
+            padding: 10px;
+            margin: 10px 0;
+            border-radius: 5px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+        form {
+            display: flex;
+            margin-bottom: 20px;
+        }
+        input[type="text"], input[type="number"] {
+            padding: 10px;
+            margin-right: 10px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            flex: 1;
+        }
+        button {
+            padding: 10px;
+            background: #35424a;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+        button:hover {
+            background: #2c3e50;
+        }
+    </style>
 </head>
 <body>
     <header>
@@ -18,7 +75,7 @@
         <h2>Add New Product</h2>
         <form id="add-product-form">
             <input type="text" id="product-name" placeholder="Product Name" required />
-            <input type="number" id="product-price" placeholder="Price" required />
+            <input type="number" id="product-price" placeholder="Price (RP)" required />
             <button type="submit">Add Product</button>
         </form>
     </main>
