--- a/manage-products.html
+++ b/manage-products.html
@@ -49,6 +49,7 @@
             border: 1px solid #ccc;
             border-radius: 5px;
             flex: 1;
+            max-width: 150px; /* Limit width */
         }
         button {
             padding: 10px;
