--- a/manage-products.html
+++ b/manage-products.html
@@ -48,8 +48,8 @@
             margin-right: 10px;
             border: 1px solid #ccc;
             border-radius: 5px;
-            flex: 1;
-            max-width: 150px; /* Limit width */
+            width: 150px; /* Fixed width */
+            max-width: 100%; /* Responsive */
         }
         button {
             padding: 10px;
