--- a/manage-products.html
+++ b/manage-products.html
@@ -42,6 +42,7 @@
         form {
             display: flex;
             margin-bottom: 20px;
+            align-items: center; /* Center items vertically */
         }
         input[type="text"], input[type="number"] {
             padding: 10px;
@@ -49,7 +50,7 @@
             border: 1px solid #ccc;
             border-radius: 5px;
             width: 150px; /* Fixed width */
-            max-width: 100%; /* Responsive */
+            box-sizing: border-box; /* Include padding and border in width */
         }
         button {
             padding: 10px;
