--- a/manage-products.html
+++ b/manage-products.html
@@ -28,9 +28,14 @@
         }
         #product-list {
             margin-bottom: 20px;
+            max-height: 300px; /* Set a max height */
+            overflow-y: auto; /* Enable vertical scrolling */
+            border: 1px solid #ccc; /* Optional: Add a border for better visibility */
+            padding: 10px;
+            background: white;
+            border-radius: 5px;
         }
         .product-item {
-            background: white;
             padding: 10px;
             margin: 10px 0;
             border-radius: 5px;
