--- a/manage-products.html
+++ b/manage-products.html
@@ -42,13 +42,15 @@
         form {
             display: flex;
             margin-bottom: 20px;
+            align-items: center; /* Align items vertically */
         }
         input[type="text"], input[type="number"] {
             padding: 10px;
             margin-right: 10px;
             border: 1px solid #ccc;
             border-radius: 5px;
-            flex: 1;
+            flex: 0 1 200px; /* Fixed width for inputs */
+            min-width: 0; /* Prevent shrinking */
         }
         button {
             padding: 10px;
@@ -76,7 +78,7 @@
         <form id="add-product-form">
             <input type="text" id="product-name" placeholder="Product Name" required />
             <input type="number" id="product-price" placeholder="Price (RP)" required />
-            <input type="number" id="product-qty" placeholder="Quantity" required />
+            <input type="number" id="product-qty" placeholder="Qty" required />
             <button type="submit">Add Product</button>
         </form>
     </main>
