--- a/manage-products.html
+++ b/manage-products.html
@@ -42,15 +42,20 @@
         form {
             display: flex;
             margin-bottom: 20px;
-            align-items: center; /* Align items vertically */
+            align-items: center;
+            position: sticky;
+            top: 0;
+            background: #f4f4f4;
+            padding: 10px;
+            z-index: 10;
         }
         input[type="text"], input[type="number"] {
             padding: 10px;
             margin-right: 10px;
             border: 1px solid #ccc;
             border-radius: 5px;
-            flex: 0 1 200px; /* Fixed width for inputs */
-            min-width: 0; /* Prevent shrinking */
+            flex: 0 1 150px;
+            min-width: 0;
         }
         button {
             padding: 10px;
@@ -78,7 +83,7 @@
         <form id="add-product-form">
             <input type="text" id="product-name" placeholder="Product Name" required />
             <input type="number" id="product-price" placeholder="Price (RP)" required />
-            <input type="number" id="product-qty" placeholder="Qty" required />
+            <input type="number" id="product-qty" placeholder="Quantity" required />
             <button type="submit">Add Product</button>
         </form>
     </main>
