--- a/manage-products.html
+++ b/manage-products.html
@@ -43,11 +43,10 @@
             display: flex;
             margin-bottom: 20px;
             align-items: center;
-            position: sticky;
-            top: 0;
             background: #f4f4f4;
             padding: 10px;
-            z-index: 10;
+            border-radius: 5px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
         }
         input[type="text"], input[type="number"] {
             padding: 10px;
